feat(pads): added possibility to add new pads

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,6 +21,7 @@ $stable: #4CBB17;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+@import "utils";
 @import "pads";
 @import "details";
 
