--- a/www/templates/new-item.html
+++ b/www/templates/new-item.html
@@ -4,13 +4,14 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Brand</span>
-          <select name="brand" ng-model="brand" ng-options="brand for brand in brands track by brand.id"></select>
+          <select name="brand" ng-model="form.brand" ng-options="b for b in brands"></select>
         </label>
         <label class="item item-input">
           <span class="input-label">Size</span>
-          <select name="brand" ng-model="size" ng-options="size for size in sizes track by size.id"></select>
+          <select name="size" ng-model="form.size" ng-options="s for s in sizes"></select>
         </label>
         <button class="button button-full button-balanced" ng-click="save()">Save</button>
+        <div class="center status-message">{{ statusMessage }}</div>
       </div>
     </form>
   </ion-content>
