--- a/www/templates/pads.html
+++ b/www/templates/pads.html
@@ -2,7 +2,7 @@
   <ion-content>
     <a class="button button-energized new-button" href="#/app/items/new">New pad</a>
     <ion-list can-swipe="{{ true }}">
-      <ion-item ng-repeat="pad in pads" href="#/app/pads/{{ pad.id }}">
+      <ion-item ng-repeat="pad in pads" href="#/app/pads/{{ pad.$id }}">
         <span>{{ ::pad.brand }} ({{ ::pad.size }})</span>
         <span ng-if="pad.rentedBy"> - {{ ::pad.rentedBy }}</span>
         <ion-option-button class="button-energized">Missing</ion-option-button>
