--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,6 +22,8 @@ $stable: #4CBB17;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 @import "utils";
+@import "popover";
 @import "pads";
 @import "details";
+
 
