fix(app): it is now possible to create new players, pads and helmets. It is also possible to assign a pad or helmet to a user. This is the first draft version of the app

--- a/www/templates/pads-new.html
+++ b/www/templates/pads-new.html
@@ -1,4 +1,4 @@
-<ion-view view-title="New Item" class="new-item-page">
+<ion-view view-title="New Pad" class="new-item-page">
   <ion-content>
     <form>
       <div class="list">
