--- a/www/templates/select-player.html
+++ b/www/templates/select-player.html
@@ -5,7 +5,7 @@
   </ion-header-bar>
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="player in players" ng-click="assignPad(player)">
+      <ion-item ng-repeat="player in players" ng-click="assign(player)">
         <span>{{ player.name }}</span>
       </ion-item>
     </ion-list>
