--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/pads">
           Pads
         </ion-item>
+        <ion-item menu-close href="#/app/helmets">
+          Helmets
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
