--- a/www/templates/players-new.html
+++ b/www/templates/players-new.html
@@ -10,5 +10,8 @@
         <div class="center status-message">{{ statusMessage }}</div>
       </div>
     </form>
+    <ion-list>
+      <ion-item ng-repeat="player in players">{{ player.name }}</ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
